--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -4,7 +4,7 @@ backend:
 
 # These lines should *not* be indented
 media_folder: "public/assets/blog" # Media files will be stored in the repo under static/images/uploads
-public_folder: "/assets/blog" # The src attribute for uploaded media will begin with /images/uploads
+public_folder: "/src/blog" # The src attribute for uploaded media will begin with /images/uploads
 
 
 collections:
