--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -23,7 +23,7 @@ collections:
       - {label: "Image Alt", name: "imageAlt", widget: "string"}
       - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
       - {label: "Body", name: "body", widget: "markdown"}
-  - name: "services" # Used in routes, e.g., /admin/collections/blog
+  - name: "services" # Used in routes, e.g., /admin/collections/services
     label: "Services" # Used in the UI
     folder: "src/services" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
