--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -33,7 +33,7 @@ collections:
       - {label: "Summary", name: "description", widget: "string"}
       - {label: "Author", name: "author", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Tags", name: "tags", widget: "list", default: ["post"]}
+      - {label: "Tags", name: "tags", widget: "list", default: ["services"]}
       - {label: "Featured Image", name: "image", widget: "image"}
       - {label: "Image Alt", name: "imageAlt", widget: "string"}
       - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
