--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/webtactics/kevin-powel-jamstack-blog#readme",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0",
+    "@netlify/plugin-lighthouse": "^4.0.7",
     "netlify-plugin-minify-html": "^0.3.1"
   }
 }
